<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">BusApplication</string>
<string name="prompt_email">Email</string>
<string name="prompt_password">Password</string>
<string name="login">Log In</string>
<string name="create_new">Click here for register</string>
<string name="not_register">Not Register?</string>
<string name="name">Name</string>
<string name="phone_number">Phone Number</string>
<string name="register">Register</string>
<string name="name_error">Please enter your name</string>
<string name="phone_error">Please enter a phone number</string>
<string name="email_error">Please enter a email address</string>
<string name="error_invalid_email">Email is not valid</string>
<string name="password_error">Please enter a password</string>
<string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
</resources>