<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_centerInParent="true"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Register"
        android:textSize="30dp"
        android:layout_marginLeft="135dp"
        android:textColor="#000"
        android:layout_marginBottom="100dp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/top_margin"


        android:hint="@string/name"
        android:inputType="textNoSuggestions"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/top_margin"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/top_margin"

        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/top_margin"

        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding" />



    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"


        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/not_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"/>

</LinearLayout>